--- a/jquery.html
+++ b/jquery.html
@@ -7,10 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p id="first"> my first sentence</p>
+    <p id="second"> my second sentence </p>
+    <p class="third"> my third sentence</p>
+  <!-- Link to Jquery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>    
+  jQuery(document).
+  <script src="jquery.js"></script>
 </body>
-<p> my first sentence</p>
-<p> my second sentence </p>
-<script>   </script>
 
 </html>
