--- a/jquery.html
+++ b/jquery.html
@@ -12,7 +12,8 @@
     <p class="third"> my third sentence</p>
   <!-- Link to Jquery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>    
-  jQuery(document).
+  jQuery(document).ready(() =>
+
   <script src="jquery.js"></script>
 </body>
 
